--- a/examples/msx/galaga/Makefile-galaga
+++ b/examples/msx/galaga/Makefile-galaga
@@ -1,16 +1,19 @@
-GAME=goonies
+GAME=galaga
 
 all: rom disasm check
 
 check: disasm rom
 	md5sum $(GAME)*.rom
 
-disasm: $(GAME).py exec_trace.py msx_trace.py
+disasm: $(GAME).py
 	./$(GAME).py $(GAME).rom
+	rm -f xaa xab
 
 rom:
 	z80asm $(GAME).asm
-	mv a.bin $(GAME)-new.rom
+	split -b 8192 a.bin
+	rm a.bin
+	cat xaa xaa xab xab > $(GAME)-new.rom
 
 run: rom
 	openmsx $(GAME)-new.rom
